js/js.translator/testData/incremental/invalidation/moveExternalDeclarationsBetweenFiles/js-module-c.mjs
export function externalDemoFunction() { return 4; }